Update the project template
 Changes to be committed:
	modified:   project-template/pages/page.html
	modified:   project-template/templates/partials/site-footer.html
	modified:   project-template/templates/partials/site-header.html
	modified:   project-template/templates/partials/styles.css

--- a/project-template/pages/page.html
+++ b/project-template/pages/page.html
@@ -1,4 +1,4 @@
-<main>
+<main class="site-width-container">
     <h1>The start of something great!</h1>
-    {{noop markdown}}
+    {{noop content.page}}
 </main>
