Add error handling pages.
 Changes to be committed:
	modified:   cli/app-server.js
	modified:   lib/error-handlers/error-handler.js
	modified:   lib/request-handlers/page-handler.js
	modified:   lib/view-service/view-service.js
	modified:   project-template/kixx-config.jsonc
	new file:   project-template/pages/404/page.html
	new file:   project-template/pages/error/page.html
	modified:   project-template/pages/page.html
	new file:   project-template/pages/sub-page/page.html
	new file:   project-template/pages/sub-page/page.md

--- a/project-template/pages/page.html
+++ b/project-template/pages/page.html
@@ -1,4 +1,5 @@
 <main class="site-width-container">
     <h1>The start of something great!</h1>
     {{noop content.page}}
+    <p><a href="/sub-page">Link to sub-page</a></p>
 </main>
