--- a/project-template/pages/page.html
+++ b/project-template/pages/page.html
@@ -1,5 +1,5 @@
 <main class="site-width-container">
     <h1>The start of something great!</h1>
-    {{noop content.page}}
+    {{unescape content.page}}
     <p><a href="/sub-page">Link to sub-page</a></p>
 </main>
