Better error handling with default error template
 Changes to be committed:
	modified:   lib/error-handlers/error-handler.js
	modified:   project-template/pages/error/page.html

--- a/project-template/pages/error/page.html
+++ b/project-template/pages/error/page.html
@@ -23,6 +23,7 @@
         overflow-x: auto;
         padding: 1em;
         background-color: #ddd;
+        color: #333;
         border: 1px solid #bbb;
         border-radius: 0.5em;
     }
